[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-a-maze-ing"
version = "1.0.0"
description = "Simple maze generator with centered 42 pattern"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
a-maze-ing = "a_maze_ing:main"

[tool.setuptools]
py-modules = ["a_maze_ing", "maze_generator", "maze_utils", "visualizer"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["W503"]
exclude = [
	".git",
	"__pycache__",
	".mypy_cache",
	"build",
	"dist",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
