[project]
name = "mazegen"
version = "0.1.0"
description = ""
authors = [
    {name = "mel-bakh"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{ include = "mazegen" }]
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
